# phone_number_parser

./: Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs  phone_number.pest
tests/: test.rs
