[package]
name = "phone_number_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
